fix: Open Api 제한 횟수관련 환경변수 버그 수정